# fractal-project

./: README.md
server/: .gitignore  Cargo.toml  shema_example.graphql
server/src/: lib.rs  main.rs
server/src/data/: mod.rs
server/src/graphql/: errors.rs  mod.rs  schema.rs
server/tests/api/: fractal.rs  fractal_context.rs  health_check.rs  main.rs  utils.rs
web/: codegen.ts  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  routeTree.gen.ts
web/src/api/: client.ts  index.ts  queries.ts
web/src/api/gql/: gql.ts  graphql.ts
web/src/components/: fractal-traversal.tsx  fractal-ui.tsx  layout.tsx  navigation.tsx
web/src/hooks/: index.ts  useFractalTextVisualization.ts  useTheme.ts
web/src/routes/: __root.tsx  index.lazy.tsx  traversal.lazy.tsx
